dropshot/tests/fail/bad_endpoint7.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> tests/fail/bad_endpoint7.rs:25:13
     |
25   | ) -> Result<HttpResponseOk<Ret>, HttpError> {
     |             ^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
     = note: required because of the requirements on the impl of `dropshot::handler::HttpResponseContent` for `Ret`
note: required by a bound in `HttpResponseOk`
    --> src/handler.rs
     |
     | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
     |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`
